sort height issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,5 +73,10 @@
 
     body {
         @apply bg-background text-foreground;
+        height: 100%;
+    }
+
+    html {
+        height: 100%;
     }
 }
